Added an actual file conversion process + Merged converters into one jar file

--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -18,8 +18,7 @@
     <modules>
         <module>controller</module>
         <module>dependencies</module>
-        <module>json</module>
-        <module>XML</module>
+        <module>defaultModules</module>
     </modules>
 
 </project>
