--- a/converter/defaultModules/pom.xml
+++ b/converter/defaultModules/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>XML</artifactId>
+    <artifactId>defaultModules</artifactId>
 
     <packaging>jar</packaging>
 
@@ -38,6 +38,11 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -46,7 +51,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>xml</finalName>
+                    <finalName>defaultModules</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <outputDirectory>../target/modules</outputDirectory>
                 </configuration>
