--- a/converter/controller/pom.xml
+++ b/converter/controller/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.example</groupId>
+        <groupId>dhbw.fileconverter</groupId>
         <artifactId>converter</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -19,7 +19,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>dhbw.fileconverter</groupId>
             <artifactId>dependencies</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
@@ -60,7 +60,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>org.example.Main</mainClass>
+                                    <mainClass>dhbw.fileconverter.Main</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
