--- a/converter/dependencies/pom.xml
+++ b/converter/dependencies/pom.xml
@@ -12,5 +12,13 @@
     <artifactId>dependencies</artifactId>
 
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
